[project]
name = "es-tools"
version = "1.0.0"
description = "Tool for the demonstration of the erasing system applications."
readme = "README.md"
requires-python = ">=3.10, <4"
license = {file = "LICENSE"}
keywords = ["erasing system, erasing operations, applications of the formal models"]
authors = [
    {name = "David Chocholatý", email = "xchoch09@stud.fit.vutbr.cz"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
